# raytrace-py

./: .gitignore  README.md  pyproject.toml  setup.py
examples/circle/: script.py
examples/color-lights/: script.py
examples/many-balls/: script.py
examples/rainbow/: script.py
raytracer/: __init__.py  linalg.py  options.py  render.py  utils.py  vec3.py  visualize.py
raytracer/light/: __init__.py  directional.py  light_t.py  point.py
raytracer/lights/: __init__.py  directional.py  light_t.py  point.py
raytracer/materials/: __init__.py  diffuse.py  material_t.py  reflect.py  reflect_refract.py
raytracer/objects/: __init__.py  mesh.py  object_t.py  sphere.py  triangle.py
tests/: test_raytracer.py
