[tool.poetry]
name = "raytracer"
version = "0.1.0"
description = ""
authors = ["bryan <bryan.deng002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
types-Pillow = "^9.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
